projects/maison/src/apps/n8n/vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/exclude-adguard: "true"
    external-dns.alpha.kubernetes.io/exclude-cloudflare: "true"
  name: n8n-tailscale
  namespace: n8n
spec:
  defaultBackend:
    service:
      name: n8n
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - n8n
